--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
   <footer>Created by the creative team, Delhivery Bangalore</footer>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-<script src="script.js"></script>
+<script src="script_v124.js"></script>
+</body></html>
 </body></html>
