--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <p class="sizes-label" style="margin-top:18px;">
-      The icons would be generated in these sizes — 16x16, 24x24, 32x32, 36x36, 57x57, 64x64, 96x96, 114x114, 128x128,
+      The icons would be generated in these sizes — 16x16, 24x24, 32x32, 36x36, 48x48, 57x57, 64x64, 72x72, 96x96, 114x114, 128x128,
       144x144, 192x192, 256x256, 320x320, 400x400, 512x512, 800x800, 1024x1024, 2048x2048
     </p>
 
